data/derived/sp14/progs/unify/prog4553.ml.out
Characters 179-195:
  | Average (var3, var4) -> (((eval(var3, x, y) + eval(var4, x, y)))/2)
                               ^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
